--- a/archives/zhihu-questions/2023-10-27.md
+++ b/archives/zhihu-questions/2023-10-27.md
@@ -1,23 +1,26 @@
 # 2023-10-27
 
-共 150 条
+共 155 条
 
 <!-- BEGIN ZHIHUQUESTIONS -->
-<!-- 最后更新时间 Fri Oct 27 2023 15:00:44 GMT+0800 (China Standard Time) -->
-1. [中国将推动新一轮「房改」，明确提出「用改革创新的办法，在大城市规划建设『保障性住房』」，如何解读？](https://www.zhihu.com/question/628013389)
+<!-- 最后更新时间 Fri Oct 27 2023 16:00:51 GMT+0800 (China Standard Time) -->
 1. [拜登下令美军对叙利亚境内伊朗伊斯兰革命卫队及其支持组织目标发动空袭，如何解读美方此举？](https://www.zhihu.com/question/628021366)
 1. [福岛核电站 4 人被核污水溅射，其中 2 人紧急送医，被核污水溅射有何危害？](https://www.zhihu.com/question/627867941)
 1. [23/24 赛季 NBA：太阳 95:100 湖人，戴维斯两双，詹姆斯 21分，如何评价本场比赛？](https://www.zhihu.com/question/628029550)
 1. [10 月 27 日三大指数低开，华为汽车概念继续活跃，如何看待今日行情？](https://www.zhihu.com/question/628012181)
-1. [印度军队向巴基斯坦开火，消息称一架无人机试图侵入巴基斯坦，被巴方击落，随后印军开火，目前情况如何？](https://www.zhihu.com/question/628025662)
 1. [2023 年 1-9 月份全国规模以上工业企业利润同比下降 9.0%，降幅收窄，哪些信息值得关注？](https://www.zhihu.com/question/628012189)
-1. [《繁城之下》的杀人顺序有必然的逻辑吗？](https://www.zhihu.com/question/627503182)
-1. [科幻作品里的哪个场景你觉得最有可能实现？](https://www.zhihu.com/question/484533677)
+1. [印度军队向巴基斯坦开火，消息称一架无人机试图侵入巴基斯坦，被巴方击落，随后印军开火，目前情况如何？](https://www.zhihu.com/question/628025662)
 1. [游戏公司一天是怎么过的呢?](https://www.zhihu.com/question/529586343)
-1. [26 日，王毅在华盛顿会见美国国务卿布林肯，有哪些信息值得关注？](https://www.zhihu.com/question/628014255)
+1. [《繁城之下》的杀人顺序有必然的逻辑吗？](https://www.zhihu.com/question/627503182)
+1. [心理咨询师在倾听的时候睡着了，说明不敬业吗？](https://www.zhihu.com/question/626980931)
+1. [普通人，如何才能理性地选择贴近生活的「智慧照明」？](https://www.zhihu.com/question/626854284)
+1. [《繁城之下》小宝子为什么要杀冷捕头和程神医？](https://www.zhihu.com/question/627331800)
+1. [今年你购入的面霜里，哪个让你感叹「贵有贵的道理」？](https://www.zhihu.com/question/619125432)
+1. [如何用「我起床了，然后」造句？](https://www.zhihu.com/question/627861941)
+1. [科幻作品里的哪个场景你觉得最有可能实现？](https://www.zhihu.com/question/484533677)
 1. [你认为对抗外星人入侵有哪些有效的策略？我们的技术水平是否足以面对来自外太空的威胁？](https://www.zhihu.com/question/626841044)
 1. [职场人日常通勤，大家有哪些秋季「氛围感」穿搭思路可以分享？](https://www.zhihu.com/question/622810753)
-1. [今年你购入的面霜里，哪个让你感叹「贵有贵的道理」？](https://www.zhihu.com/question/619125432)
+1. [想一个人去旅行，有哪些自然风景特美的地方？](https://www.zhihu.com/question/372240412)
 1. [如何评价《明日方舟终末地》10月26日发布的首测pv和实机演示？](https://www.zhihu.com/question/627879554)
 1. [你为什么喜欢足球？](https://www.zhihu.com/question/310583546)
 1. [23/24 赛季 NBA，76 人 117:118 雄鹿，利拉德39字母哥23，如何评价本场比赛？](https://www.zhihu.com/question/628017837)
@@ -26,37 +29,45 @@
 1. [挑选 offer 时要如何做到保住「前途」和「钱途」的平衡？](https://www.zhihu.com/question/622558820)
 1. [为什么很多男人下班后总喜欢在车里待一会儿？](https://www.zhihu.com/question/627960500)
 1. [金融行业第一学历，是不是决定了发展的上下限?](https://www.zhihu.com/question/622553938)
+1. [提高免疫力吃什么食物好？](https://www.zhihu.com/question/576611274)
 1. [米哈游《绝区零》版号终于下来了，你对这个游戏有什么期待？](https://www.zhihu.com/question/627932815)
+1. [含霜的诗句有哪些？](https://www.zhihu.com/question/627494166)
 1. [扎克伯格称明年 AI 将成 Meta 最大投资领域，人力将向 AI 集中，如何看待该转变？元宇宙凉了？](https://www.zhihu.com/question/627896312)
+1. [长期跑步的人都选择什么样的跑步训练鞋？](https://www.zhihu.com/question/627911513)
 1. [体育界让你印象最深刻的一句/段话是由谁说出来的，说的是什么 ？](https://www.zhihu.com/question/625439583)
 1. [选择有时候比努力更重要，2023 年毕业生们都入职了哪些企业？](https://www.zhihu.com/question/627902122)
-1. [俄外交部称哈马斯代表正在莫斯科进行访问，有哪些信息值得关注？](https://www.zhihu.com/question/627958005)
-1. [深圳二手房在售量创历史新高，部分房源议价率超 10 %，意味着什么？](https://www.zhihu.com/question/627902548)
-1. [承认自己平庸很可怕吗?](https://www.zhihu.com/question/627823123)
-1. [S13 瑞士轮 T1 vs BLG 你更看好谁？](https://www.zhihu.com/question/627875361)
 1. [可以留下一首你单曲循环很久很久的歌吗？](https://www.zhihu.com/question/623993360)
 1. [如何看待游戏《完蛋！我被美女包围了！》成为 Steam 国区游戏热销榜第一名？](https://www.zhihu.com/question/627493942)
+1. [深圳二手房在售量创历史新高，部分房源议价率超 10 %，意味着什么？](https://www.zhihu.com/question/627902548)
+1. [如果万有引力突然消失，宇宙会是怎么样的？](https://www.zhihu.com/question/323436152)
+1. [有哪些道理是你当了老师后才知道的？](https://www.zhihu.com/question/366090311)
+1. [业内懂行的人首推什么电视？选电视是否是外行看参数，内行看调校？](https://www.zhihu.com/question/625436606)
+1. [大家都是怎么「精简护肤」的？有哪些护肤单品分享下？](https://www.zhihu.com/question/619866951)
+1. [2023 年 10 月游戏版号公布，《绝区零》《鸣潮》等游戏在列，你最期待哪款游戏？](https://www.zhihu.com/question/627929293)
+1. [如何评价《DOTA2》AR进胜者组？](https://www.zhihu.com/question/626316911)
+1. [为什么单机游戏的作者们往往不喜欢玩家使用修改器？](https://www.zhihu.com/question/624833848)
 1. [如何评价曼联九二黄金一代？](https://www.zhihu.com/question/26943838)
+1. [裸辞4个月后突然要上班了，心里产生了抗拒，该如何面对和解决呢？](https://www.zhihu.com/question/627694666)
+1. [通勤的化妆包里应该带什么最精简？什么样的彩妆产品可以实现一物多用？](https://www.zhihu.com/question/625769723)
+1. [长虹电视历经 65 年技术沉淀，作为头部国货品牌有哪些值得关注的突破性技术及产品？](https://www.zhihu.com/question/627863956)
+1. [如何看待米哈游新作「绝区零」过审版号？](https://www.zhihu.com/question/627931178)
+1. [人力打气筒可以给轿车轮胎打气吗？](https://www.zhihu.com/question/322016120)
+1. [学习动态规划有哪些好书？](https://www.zhihu.com/question/38213967)
+1. [对于一个做饭人，觉得厨房最受用的小东西是什么？](https://www.zhihu.com/question/625470556)
+1. [中国将推动新一轮「房改」，明确提出「用改革创新的办法，在大城市规划建设『保障性住房』」，如何解读？](https://www.zhihu.com/question/628013389)
+1. [26 日，王毅在华盛顿会见美国国务卿布林肯，有哪些信息值得关注？](https://www.zhihu.com/question/628014255)
+1. [俄外交部称哈马斯代表正在莫斯科进行访问，有哪些信息值得关注？](https://www.zhihu.com/question/627958005)
+1. [承认自己平庸很可怕吗?](https://www.zhihu.com/question/627823123)
+1. [S13 瑞士轮 T1 vs BLG 你更看好谁？](https://www.zhihu.com/question/627875361)
 1. [我每天读书，就一定会提升智慧吗？](https://www.zhihu.com/question/625996183)
-1. [想一个人去旅行，有哪些自然风景特美的地方？](https://www.zhihu.com/question/372240412)
 1. [上班族健身没有动力该如何坚持？](https://www.zhihu.com/question/626812753)
 1. [新能源车是买车一时爽，一直用车一直爽吗？](https://www.zhihu.com/question/623660640)
 1. [经常出差，怎么保持运动状态？](https://www.zhihu.com/question/625565400)
 1. [招聘时许诺高薪入职时却「缩水」，公司不遵守招聘时的薪资承诺该怎样维权？](https://www.zhihu.com/question/622558901)
-1. [2023 年 10 月游戏版号公布，《绝区零》《鸣潮》等游戏在列，你最期待哪款游戏？](https://www.zhihu.com/question/627929293)
-1. [有哪些道理是你当了老师后才知道的？](https://www.zhihu.com/question/366090311)
 1. [如果DOTA2里你和职业选手solo，但允许你出门时点亮所有天赋，你会选择哪个英雄？](https://www.zhihu.com/question/621291184)
-1. [如果万有引力突然消失，宇宙会是怎么样的？](https://www.zhihu.com/question/323436152)
-1. [业内懂行的人首推什么电视？选电视是否是外行看参数，内行看调校？](https://www.zhihu.com/question/625436606)
-1. [大家都是怎么「精简护肤」的？有哪些护肤单品分享下？](https://www.zhihu.com/question/619866951)
-1. [为什么单机游戏的作者们往往不喜欢玩家使用修改器？](https://www.zhihu.com/question/624833848)
 1. [如何选到适合自己家的集成厨电？](https://www.zhihu.com/question/627377358)
-1. [如何评价《DOTA2》AR进胜者组？](https://www.zhihu.com/question/626316911)
-1. [长虹电视历经 65 年技术沉淀，作为头部国货品牌有哪些值得关注的突破性技术及产品？](https://www.zhihu.com/question/627863956)
-1. [裸辞4个月后突然要上班了，心里产生了抗拒，该如何面对和解决呢？](https://www.zhihu.com/question/627694666)
 1. [NBA 23-24常规赛湖人队vs太阳队，如何评价这场比赛？](https://www.zhihu.com/question/627980027)
 1. [如果把牛顿关在一个有电脑的房间里，他多久能发现如何上网冲浪打游戏？](https://www.zhihu.com/question/627880752)
-1. [长期跑步的人都选择什么样的跑步训练鞋？](https://www.zhihu.com/question/627911513)
 1. [同部门同样的工资，其他人都闲着聊天，自己却被安排很多工作忙得不停，领导说是重视你，该怎么办？](https://www.zhihu.com/question/627707106)
 1. [应届生在签三方时该注意什么，接 offer 时薪资方面有哪些坑需要避开？](https://www.zhihu.com/question/622558862)
 1. [如何评价《崩坏：星穹铁道》中的组织“星际和平公司”？](https://www.zhihu.com/question/627590459)
@@ -73,7 +84,6 @@
 1. [埃尔多安发表「最强硬」言论称「哈马斯不是恐怖组织」是「解放组织」，释放了哪些信号？](https://www.zhihu.com/question/627901638)
 1. [如何看待小米于10月26日发布搭载澎湃OS 的小米14 系列？有什么亮点和不足？](https://www.zhihu.com/question/627903421)
 1. [科幻作品创造了哪些有趣的物理场景？](https://www.zhihu.com/question/627591964)
-1. [提高免疫力吃什么食物好？](https://www.zhihu.com/question/576611274)
 1. [你习惯选择什么时间锻炼？为什么？](https://www.zhihu.com/question/625565467)
 1. [零跑汽车卖身，获 Stellantis 15 亿欧元投资，零跑汽车这把稳了吗？](https://www.zhihu.com/question/627875225)
 1. [可以留下一首你写的诗吗？](https://www.zhihu.com/question/626713561)
@@ -86,7 +96,6 @@
 1. [如果地球的自转速度大大降低，直至停止自转，会出现哪些现象？](https://www.zhihu.com/question/627564890)
 1. [恒星生成原理是否违反了热力学第二定律？](https://www.zhihu.com/question/618519969)
 1. [李佳琦直播间「双十一」首日卖出 95 亿，相较去年减少一半，如何评价这一数据？直播带货行业将如何发展？](https://www.zhihu.com/question/627874018)
-1. [含霜的诗句有哪些？](https://www.zhihu.com/question/627494166)
 1. [如何评价23年Q3手机出货量情况：荣耀逆势增长至第一，苹果位列第三，小米持续垫底？](https://www.zhihu.com/question/627909456)
 1. [学习到底是快乐的，还是痛苦的?](https://www.zhihu.com/question/622489056)
 1. [IMF 预测 2023 年日本 GDP 将被德国超越，跌至世界第 4，日本经济发展前景如何？](https://www.zhihu.com/question/627736100)
@@ -104,7 +113,6 @@
 1. [如何评价《一人之下》漫画 645（684）话？](https://www.zhihu.com/question/627978294)
 1. [心无挂碍，什么叫挂碍？](https://www.zhihu.com/question/622502511)
 1. [S13 世界赛瑞士轮 WBG 2:0 淘汰MAD，如何评价这场比赛？](https://www.zhihu.com/question/627922029)
-1. [对于一个做饭人，觉得厨房最受用的小东西是什么？](https://www.zhihu.com/question/625470556)
 1. [S13 瑞士轮 WBG 2:0 淘汰 MAD，如何评价这场比赛？](https://www.zhihu.com/question/627910077)
 1. [大家有感觉特别美的诗句分享吗？](https://www.zhihu.com/question/627402008)
 1. [国内小家电市场的崛起，意味着国内的消费升级还是降级？](https://www.zhihu.com/question/627881608)
@@ -119,14 +127,12 @@
 1. [为什么公务员面试不用测谎仪？](https://www.zhihu.com/question/627695687)
 1. [以军夜间对加沙地带发起一次大规模地面进攻，目前情况如何？巴以局势将如何发展？](https://www.zhihu.com/question/627887198)
 1. [40 至 50 岁年龄段的，选择什么样的运动更有利于身体健康？](https://www.zhihu.com/question/625174137)
-1. [通勤的化妆包里应该带什么最精简？什么样的彩妆产品可以实现一物多用？](https://www.zhihu.com/question/625769723)
 1. [领导嫌弃自己做事拖拉，办事效率低下，自己也想辞职了，应不应该提出辞职呢？](https://www.zhihu.com/question/627745768)
 1. [薛其坤院士获得凝聚态物理最高奖，为 70 年来首位中国籍获奖者，其成果具有哪些意义？](https://www.zhihu.com/question/627620200)
 1. [美国共和党议员迈克·约翰逊当选众议院议长，他将面临哪些挑战？还有哪些信息值得关注？](https://www.zhihu.com/question/627864548)
 1. [如何评价《再见爱人》第三季第八期（下）？](https://www.zhihu.com/question/627721962)
 1. [2023下半年有什么新品电视值得关注？](https://www.zhihu.com/question/627632193)
 1. [如何评价电视剧《田耕纪》的大结局?](https://www.zhihu.com/question/627822092)
-1. [人力打气筒可以给轿车轮胎打气吗？](https://www.zhihu.com/question/322016120)
 1. [用人为发出的电去电击树木，得到的算是雷击木吗？](https://www.zhihu.com/question/609146154)
 1. [DOTA2 Ti12 LGD 对阵 AR，本场比赛有哪些看点？](https://www.zhihu.com/question/627148383)
 1. [你在生活中见过的最牛的对联是什么？](https://www.zhihu.com/question/556198390)
@@ -137,7 +143,6 @@
 1. [美国发生大规模枪击事件，已致 22 人死亡，50 至 60 人受伤，枪手仍然在逃，目前情况如何？](https://www.zhihu.com/question/627868335)
 1. [电影《河边的错误》的结局是什么意思？](https://www.zhihu.com/question/627484495)
 1. [神舟十七号载人飞船 26 日成功发射，此次发射有何重大意义？对此你有哪些祝福？](https://www.zhihu.com/question/626800404)
-1. [如何看待米哈游新作「绝区零」过审版号？](https://www.zhihu.com/question/627931178)
 1. [科幻作品中都有哪些奇特的星球？](https://www.zhihu.com/question/627591578)
 1. [新议长选出后，美众院通过「第一项」决议，支持以色列对哈马斯战争，释放了什么信号？](https://www.zhihu.com/question/627861733)
 1. [荣耀 Magic6 在「骁龙峰会」上首次曝光，有哪些信息值得关注？](https://www.zhihu.com/question/627874140)
