--- a/archives/toutiao-search/2023-10-27.md
+++ b/archives/toutiao-search/2023-10-27.md
@@ -1,56 +1,78 @@
 # 2023-10-27
 
-共 311 条
+共 330 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 27 2023 17:00:39 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Oct 27 2023 18:00:59 GMT+0800 (China Standard Time) -->
 1. [李克强同志逝世](https://so.toutiao.com/search?keyword=李克强同志逝世)
-1. [媒体：吴尊友去世](https://so.toutiao.com/search?keyword=媒体：吴尊友去世)
-1. [从“三季报”看我国经济韧性和活力](https://so.toutiao.com/search?keyword=从“三季报”看我国经济韧性和活力)
+1. [吴尊友因胰腺癌去世](https://so.toutiao.com/search?keyword=吴尊友因胰腺癌去世)
+1. [多项数据创新高 “流动中国”动力足](https://so.toutiao.com/search?keyword=多项数据创新高+“流动中国”动力足)
 1. [王毅会见美国国务卿布林肯](https://so.toutiao.com/search?keyword=王毅会见美国国务卿布林肯)
-1. [学历和技能哪个对学生更重要](https://so.toutiao.com/search?keyword=学历和技能哪个对学生更重要)
-1. [印度军队向巴基斯坦开火](https://so.toutiao.com/search?keyword=印度军队向巴基斯坦开火)
 1. [缅北多地爆发激烈战事](https://so.toutiao.com/search?keyword=缅北多地爆发激烈战事)
-1. [男子上海瑞金医院行凶致15伤获死刑](https://so.toutiao.com/search?keyword=男子上海瑞金医院行凶致15伤获死刑)
+1. [印度军队向巴基斯坦开火](https://so.toutiao.com/search?keyword=印度军队向巴基斯坦开火)
+1. [拜登向伊朗最高领导人发直接信息](https://so.toutiao.com/search?keyword=拜登向伊朗最高领导人发直接信息)
+1. [中方回应缅北爆发军事冲突](https://so.toutiao.com/search?keyword=中方回应缅北爆发军事冲突)
 1. [国家医保局辟谣取消个人医保账户](https://so.toutiao.com/search?keyword=国家医保局辟谣取消个人医保账户)
 1. [男子私自销售柴油被判15年](https://so.toutiao.com/search?keyword=男子私自销售柴油被判15年)
 1. [官方回应村书记疑强迫妇女发生关系](https://so.toutiao.com/search?keyword=官方回应村书记疑强迫妇女发生关系)
-1. [哈马斯“大杀器”袭击以色列后方](https://so.toutiao.com/search?keyword=哈马斯“大杀器”袭击以色列后方)
 1. [中国和以色列关系到底怎么样](https://so.toutiao.com/search?keyword=中国和以色列关系到底怎么样)
-1. [欧盟争吵数天后就巴以问题达成一致](https://so.toutiao.com/search?keyword=欧盟争吵数天后就巴以问题达成一致)
 1. [拜登下令美军空袭叙利亚](https://so.toutiao.com/search?keyword=拜登下令美军空袭叙利亚)
+1. [男子开车看手机撞到骑车老妈](https://so.toutiao.com/search?keyword=男子开车看手机撞到骑车老妈)
+1. [江苏一地收的“人口费”是个什么费](https://so.toutiao.com/search?keyword=江苏一地收的“人口费”是个什么费)
+1. [欧盟争吵数天后就巴以问题达成一致](https://so.toutiao.com/search?keyword=欧盟争吵数天后就巴以问题达成一致)
+1. [美军方：空袭叙利亚与巴以冲突无关](https://so.toutiao.com/search?keyword=美军方：空袭叙利亚与巴以冲突无关)
+1. [俄方用什么武器5天击落24架乌军机](https://so.toutiao.com/search?keyword=俄方用什么武器5天击落24架乌军机)
+1. [曾上不了体育课的姑娘刷新世界纪录](https://so.toutiao.com/search?keyword=曾上不了体育课的姑娘刷新世界纪录)
+1. [男子酒后骑三轮车 遇检查调头就跑](https://so.toutiao.com/search?keyword=男子酒后骑三轮车+遇检查调头就跑)
+1. [玉渊谭天：加州提醒美国机不可失](https://so.toutiao.com/search?keyword=玉渊谭天：加州提醒美国机不可失)
+1. [粗心爸爸接错儿子](https://so.toutiao.com/search?keyword=粗心爸爸接错儿子)
+1. [美在叙非法军事基地遭袭](https://so.toutiao.com/search?keyword=美在叙非法军事基地遭袭)
+1. [女生花2小时面试3轮一问工资1900](https://so.toutiao.com/search?keyword=女生花2小时面试3轮一问工资1900)
+1. [男子3次强奸七旬独居老人获刑6年](https://so.toutiao.com/search?keyword=男子3次强奸七旬独居老人获刑6年)
+1. [学历和技能哪个对学生更重要](https://so.toutiao.com/search?keyword=学历和技能哪个对学生更重要)
+1. [沪深两市今日成交额合计9644亿元](https://so.toutiao.com/search?keyword=沪深两市今日成交额合计9644亿元)
 1. [看完李佳琦直播京东采销再降1500元](https://so.toutiao.com/search?keyword=看完李佳琦直播京东采销再降1500元)
-1. [拜登向伊朗最高领导人发直接信息](https://so.toutiao.com/search?keyword=拜登向伊朗最高领导人发直接信息)
+1. [法媒震惊中国队赢了面包“世界杯”](https://so.toutiao.com/search?keyword=法媒震惊中国队赢了面包“世界杯”)
+1. [深圳海关查获38万余枚美元硬币](https://so.toutiao.com/search?keyword=深圳海关查获38万余枚美元硬币)
+1. [幼儿园防暴演练厨师抄锅铲追进教室](https://so.toutiao.com/search?keyword=幼儿园防暴演练厨师抄锅铲追进教室)
+1. [胡锡进评讲座现不雅视频：少考虑舆论](https://so.toutiao.com/search?keyword=胡锡进评讲座现不雅视频：少考虑舆论)
+1. [男子试驾把油门当刹车撞倒销售](https://so.toutiao.com/search?keyword=男子试驾把油门当刹车撞倒销售)
+1. [成都春熙路一男子当街拦车被撞身亡](https://so.toutiao.com/search?keyword=成都春熙路一男子当街拦车被撞身亡)
+1. [学校回应小学生被家长联名要求转学](https://so.toutiao.com/search?keyword=学校回应小学生被家长联名要求转学)
+1. [邻桌模仿聋哑人称其哑巴双方起冲突](https://so.toutiao.com/search?keyword=邻桌模仿聋哑人称其哑巴双方起冲突)
+1. [外媒关注中哥就多项合作文件达一致](https://so.toutiao.com/search?keyword=外媒关注中哥就多项合作文件达一致)
+1. [2023南昌飞行大会攻略](https://so.toutiao.com/search?keyword=2023南昌飞行大会攻略)
+1. [爸爸将孩子举头顶没接住](https://so.toutiao.com/search?keyword=爸爸将孩子举头顶没接住)
+1. [油价再次跌破下调红线](https://so.toutiao.com/search?keyword=油价再次跌破下调红线)
+1. [投资10万开蔬菜店赚钱吗](https://so.toutiao.com/search?keyword=投资10万开蔬菜店赚钱吗)
+1. [巴黎世家4000元发带京沪售罄](https://so.toutiao.com/search?keyword=巴黎世家4000元发带京沪售罄)
+1. [苏炳添世界排名消失](https://so.toutiao.com/search?keyword=苏炳添世界排名消失)
+1. [中美金融工作组举行第一次会议](https://so.toutiao.com/search?keyword=中美金融工作组举行第一次会议)
+1. [易建联生日快乐](https://so.toutiao.com/search?keyword=易建联生日快乐)
+1. [沪指收复3000点](https://so.toutiao.com/search?keyword=沪指收复3000点)
+1. [港媒：澳不会反对中国加入CPTPP](https://so.toutiao.com/search?keyword=港媒：澳不会反对中国加入CPTPP)
+1. [老年人到底是胖点好还是瘦点好](https://so.toutiao.com/search?keyword=老年人到底是胖点好还是瘦点好)
+1. [伊朗军队举行为期两天的军事演习](https://so.toutiao.com/search?keyword=伊朗军队举行为期两天的军事演习)
+1. [以色列坦克夜袭加沙地带](https://so.toutiao.com/search?keyword=以色列坦克夜袭加沙地带)
+1. [媒体：吴尊友去世](https://so.toutiao.com/search?keyword=媒体：吴尊友去世)
+1. [从“三季报”看我国经济韧性和活力](https://so.toutiao.com/search?keyword=从“三季报”看我国经济韧性和活力)
+1. [男子上海瑞金医院行凶致15伤获死刑](https://so.toutiao.com/search?keyword=男子上海瑞金医院行凶致15伤获死刑)
+1. [哈马斯“大杀器”袭击以色列后方](https://so.toutiao.com/search?keyword=哈马斯“大杀器”袭击以色列后方)
 1. [媒体揭秘航天员“专列”长二F火箭](https://so.toutiao.com/search?keyword=媒体揭秘航天员“专列”长二F火箭)
 1. [夫妻遇车祸一死一伤 保险公司不赔付](https://so.toutiao.com/search?keyword=夫妻遇车祸一死一伤+保险公司不赔付)
-1. [女生花2小时面试3轮一问工资1900](https://so.toutiao.com/search?keyword=女生花2小时面试3轮一问工资1900)
-1. [玉渊谭天：加州提醒美国机不可失](https://so.toutiao.com/search?keyword=玉渊谭天：加州提醒美国机不可失)
 1. [李佳琦卖假和田玉？品牌方：已报警](https://so.toutiao.com/search?keyword=李佳琦卖假和田玉？品牌方：已报警)
-1. [爸爸将孩子举头顶没接住](https://so.toutiao.com/search?keyword=爸爸将孩子举头顶没接住)
 1. [专家：中美外长会晤3个看点](https://so.toutiao.com/search?keyword=专家：中美外长会晤3个看点)
-1. [投资10万开蔬菜店赚钱吗](https://so.toutiao.com/search?keyword=投资10万开蔬菜店赚钱吗)
 1. [中学生殴打拾荒老人会受何种处罚](https://so.toutiao.com/search?keyword=中学生殴打拾荒老人会受何种处罚)
 1. [专家称老年人有生理需求很正常](https://so.toutiao.com/search?keyword=专家称老年人有生理需求很正常)
-1. [油价再次跌破下调红线](https://so.toutiao.com/search?keyword=油价再次跌破下调红线)
 1. [微创手术算不算重疾险范围](https://so.toutiao.com/search?keyword=微创手术算不算重疾险范围)
-1. [粗心爸爸接错儿子](https://so.toutiao.com/search?keyword=粗心爸爸接错儿子)
-1. [胡锡进评讲座现不雅视频：少考虑舆论](https://so.toutiao.com/search?keyword=胡锡进评讲座现不雅视频：少考虑舆论)
 1. [太阳两场比赛39次失误与助攻一样多](https://so.toutiao.com/search?keyword=太阳两场比赛39次失误与助攻一样多)
 1. [男子缓刑期跳江救人获减刑2个月](https://so.toutiao.com/search?keyword=男子缓刑期跳江救人获减刑2个月)
 1. [除夕免收通行费以驶离出口时间为准](https://so.toutiao.com/search?keyword=除夕免收通行费以驶离出口时间为准)
 1. [加沙地带遭轰炸前后卫星影像](https://so.toutiao.com/search?keyword=加沙地带遭轰炸前后卫星影像)
 1. [赖清德夸蔡英文“建树”引嘲讽](https://so.toutiao.com/search?keyword=赖清德夸蔡英文“建树”引嘲讽)
-1. [老年人到底是胖点好还是瘦点好](https://so.toutiao.com/search?keyword=老年人到底是胖点好还是瘦点好)
 1. [00后女子被辞退补偿金是3千枚硬币](https://so.toutiao.com/search?keyword=00后女子被辞退补偿金是3千枚硬币)
-1. [幼儿园防暴演练厨师抄锅铲追进教室](https://so.toutiao.com/search?keyword=幼儿园防暴演练厨师抄锅铲追进教室)
-1. [法媒震惊中国队赢了面包“世界杯”](https://so.toutiao.com/search?keyword=法媒震惊中国队赢了面包“世界杯”)
-1. [男子3次强奸七旬独居老人获刑6年](https://so.toutiao.com/search?keyword=男子3次强奸七旬独居老人获刑6年)
-1. [苏炳添世界排名消失](https://so.toutiao.com/search?keyword=苏炳添世界排名消失)
 1. [原农业部人事劳动司副司长被查](https://so.toutiao.com/search?keyword=原农业部人事劳动司副司长被查)
-1. [邻桌模仿聋哑人称其哑巴双方起冲突](https://so.toutiao.com/search?keyword=邻桌模仿聋哑人称其哑巴双方起冲突)
 1. [初中运动会开幕式有多花哨](https://so.toutiao.com/search?keyword=初中运动会开幕式有多花哨)
-1. [巴黎世家4000元发带京沪售罄](https://so.toutiao.com/search?keyword=巴黎世家4000元发带京沪售罄)
-1. [曾上不了体育课的姑娘刷新世界纪录](https://so.toutiao.com/search?keyword=曾上不了体育课的姑娘刷新世界纪录)
 1. [于和伟首谈亲子教育：家长别太自信](https://so.toutiao.com/search?keyword=于和伟首谈亲子教育：家长别太自信)
 1. [媒体：勿把饭圈那套带到体育比赛](https://so.toutiao.com/search?keyword=媒体：勿把饭圈那套带到体育比赛)
 1. [面粉中含滑石粉？官方抽检结果出炉](https://so.toutiao.com/search?keyword=面粉中含滑石粉？官方抽检结果出炉)
@@ -63,13 +85,11 @@
 1. [国安部：有境外组织搜集我用户数据](https://so.toutiao.com/search?keyword=国安部：有境外组织搜集我用户数据)
 1. [伊朗：若以不停手美政客将引火上身](https://so.toutiao.com/search?keyword=伊朗：若以不停手美政客将引火上身)
 1. [楼盘开工挂十几个政府部门祝贺条幅](https://so.toutiao.com/search?keyword=楼盘开工挂十几个政府部门祝贺条幅)
-1. [深圳海关查获38万余枚美元硬币](https://so.toutiao.com/search?keyword=深圳海关查获38万余枚美元硬币)
 1. [安葬30年的亡父坟上又埋新坟](https://so.toutiao.com/search?keyword=安葬30年的亡父坟上又埋新坟)
 1. [楼市如何安全“着陆”](https://so.toutiao.com/search?keyword=楼市如何安全“着陆”)
 1. [美媒：中国已成为太空领域重要存在](https://so.toutiao.com/search?keyword=美媒：中国已成为太空领域重要存在)
 1. [俄媒解读拜登的“新世界秩序”](https://so.toutiao.com/search?keyword=俄媒解读拜登的“新世界秩序”)
 1. [烈士陵园树枝掰开竟是五角星图案](https://so.toutiao.com/search?keyword=烈士陵园树枝掰开竟是五角星图案)
-1. [沪指收复3000点](https://so.toutiao.com/search?keyword=沪指收复3000点)
 1. [俄媒：伊朗军演是为最坏情况做准备](https://so.toutiao.com/search?keyword=俄媒：伊朗军演是为最坏情况做准备)
 1. [侯友宜：若胜选将以避战为最大责任](https://so.toutiao.com/search?keyword=侯友宜：若胜选将以避战为最大责任)
 1. [河南货车司机怒赞西安高速绿通](https://so.toutiao.com/search?keyword=河南货车司机怒赞西安高速绿通)
@@ -114,7 +134,6 @@
 1. [利拉德雄鹿首秀仍是超巨模样](https://so.toutiao.com/search?keyword=利拉德雄鹿首秀仍是超巨模样)
 1. [以色列袭击加沙地带南部城市致4死](https://so.toutiao.com/search?keyword=以色列袭击加沙地带南部城市致4死)
 1. [航天员实现天地往返的“生命之舟”](https://so.toutiao.com/search?keyword=航天员实现天地往返的“生命之舟”)
-1. [中美金融工作组举行第一次会议](https://so.toutiao.com/search?keyword=中美金融工作组举行第一次会议)
 1. [李大霄：谁都不可能通过做空祖国赚钱](https://so.toutiao.com/search?keyword=李大霄：谁都不可能通过做空祖国赚钱)
 1. [小米魔改存储芯片](https://so.toutiao.com/search?keyword=小米魔改存储芯片)
 1. [美军向中东增派近千名士兵](https://so.toutiao.com/search?keyword=美军向中东增派近千名士兵)
